feat(authz): add SUSPEND_PROCESS_INSTANCE permission (#524)
Add SUSPEND_PROCESS_INSTANCE (PROCESS_DEFINITION resource) and
CREATE_BATCH_OPERATION_SUSPEND_PROCESS_INSTANCE (BATCH resource) to
PermissionType, AuthorizationResourceType, and ResourceType.

Unblocks camunda/camunda#57515, which added the same constants to
its own protocol-layer mirror but deferred wiring them into its
resource-type supported sets pending this release.

Switch to Set.copyOf(...) to match ResourceType, so callers can't
mutate the backing set and change authorization semantics at
runtime. Also add AuthorizationResourceTypeTest, mirroring
ResourceTypeTest, so the two enums' supported-permission sets can't
silently drift apart unnoticed.